--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,47 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+{
+  "builders": [{
+    "type": "azure-arm",
 
-trigger:
-- main
+    "client_id": "7a051f30-ba0a-4f2f-bd4c-f4b6bb409cd3",
+    "client_secret": "WE19~YFj3pN50TaZUkKv2mG.UC870-_q-u",
+    "tenant_id": "9cb037cb-dd2f-4df3-ac06-20bf27393596",
+    "subscription_id": "990d169a-6e0b-41c5-9236-ed6b0539f272",
+    "storage_account": "mytestpackergroup",
+	"resource_group_name":"myPackerGroup",
+	
+	"capture_container_name": "testpacker01",
+    "capture_name_prefix": "testpacker01",
 
-pool:
-  vmImage: ubuntu-latest
+    "os_type": "Windows",
+    "image_publisher": "MicrosoftWindowsServer",
+    "image_offer": "WindowsServer",
+    "image_sku": "2019-Datacenter",
+     
+	 
+	
+	 
+    "communicator": "winrm",
+    "winrm_use_ssl": true,
+    "winrm_insecure": true,
+    "winrm_timeout": "5m",
+    "winrm_username": "packer",
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+    "azure_tags": {
+        "dept": "Engineering",
+        "task": "Image deployment"
+    },
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    "build_resource_group_name": "myPackerGroup",
+    "vm_size": "Standard_D2_v2"
+  }],
+  "provisioners": [{
+    "type": "powershell",
+    "inline": [
+      "Add-WindowsFeature Web-Server",
+      "while ((Get-Service RdAgent).Status -ne 'Running') { Start-Sleep -s 5 }",
+      "while ((Get-Service WindowsAzureGuestAgent).Status -ne 'Running') { Start-Sleep -s 5 }",
+      "& $env:SystemRoot\\System32\\Sysprep\\Sysprep.exe /oobe /generalize /quiet /quit",
+      "while($true) { $imageState = Get-ItemProperty HKLM:\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Setup\\State | Select ImageState; if($imageState.ImageState -ne 'IMAGE_STATE_GENERALIZE_RESEAL_TO_OOBE') { Write-Output $imageState.ImageState; Start-Sleep -s 10  } else { break } }"
+    ]
+  }]
+}
